Added RestEasy / removed Obix