@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.ptoceti</groupId>
 	<artifactId>com.ptoceti.parent</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
+	<version>2.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<name>com.ptoceti.obix</name>
+	<name>Ptoceti</name>
 	<description>Parent project</description>
 	<inceptionYear>2013</inceptionYear>
-	
+
 	<organization>
 		<name>ptoceti</name>
 		<url>www.ptoceti.com</url>
@@ -37,15 +38,15 @@
 		<bundles.configuration.location>../configurations</bundles.configuration.location>
 
 		<jaxrs-api.version>2.1.5</jaxrs-api.version>
-		<jersey.version>2.28</jersey.version>
-		<jackson.version>2.9.8</jackson.version>
+		<!--<jersey.version>2.28</jersey.version>-->
+		<jackson.version>2.10.1</jackson.version>
 		<!--<pax-web.version>4.0.0</pax-web.version>-->
 		<!--<jetty-version>9.2.6.v20141205</jetty-version>-->
 		<servlet-api.version>3.1.0</servlet-api.version>
 		<!--<osgi.core.version>4.3.0</osgi.core.version>-->
 		<!--<osgi.compendium.version>4.3.0</osgi.compendium.version>-->
 		<!--<osgi.enterprise.version>4.2.0</osgi.enterprise.version>-->
-
+		<influxdb-fluentapi.version>1.2.1-SNAPSHOT</influxdb-fluentapi.version>
 		<osgi.core.version>6.0.0</osgi.core.version>
 		<osgi.compendium.version>6.0.0</osgi.compendium.version>
 		<!--
@@ -169,7 +170,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.8.0</version>
+					<version>3.8.1</version>
 					<configuration>
 						<showDeprecation>true</showDeprecation>
 						<showWarnings>true</showWarnings>
@@ -182,7 +183,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-source-plugin</artifactId>
-					<version>3.0.1</version>
+					<version>3.1.0</version>
 					<configuration>
 						<includePom>true</includePom>
 					</configuration>
@@ -262,6 +263,37 @@
 							</configuration>
 						</execution>
 					</executions>
+				</plugin>
+
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-deploy-plugin</artifactId>
+					<version>3.0.0-M1</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-install-plugin</artifactId>
+					<version>3.0.0-M1</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-release-plugin</artifactId>
+					<version>2.5.3</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>3.0.0-M3</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-failsafe-plugin</artifactId>
+					<version>3.0.0-M3</version>
 				</plugin>
 
 				<!-- OSGi BUNDLE -->
@@ -391,6 +423,7 @@
 
 							<!--<param>-vmOptions=-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005  -add-modules java.xml.bind</param>-->
 							<param>--vmOptions=-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005
+								--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED
 							</param>
 							<param>--bootDelegation=com.sun.net.httpserver</param>
 							<param>--usePersistedState=false</param>
@@ -407,15 +440,17 @@
 							<param>scan-bundle:mvn:org.osgi/org.osgi.core/${osgi.core.version}</param>
 							<!--<param>scan-bundle:mvn:org.osgi/osgi.cmpn/${osgi.compendium.version}</param>-->
 							<!--
-							<param>scan-bundle:mvn:org.osgi/org.osgi.enterprise/${osgi.enterprise.version}</param>
-							-->
+                            <param>scan-bundle:mvn:org.osgi/org.osgi.enterprise/${osgi.enterprise.version}</param>
+                            -->
 
 							<param>scan-bundle:mvn:org.apache.geronimo.bundles/json/20090211_1</param>
 							<param>scan-bundle:mvn:commons-fileupload/commons-fileupload/1.2.1</param>
 							<param>scan-bundle:mvn:commons-io/commons-io/1.4</param>
 
-							<param>scan-bundle:mvn:javax.xml.bind/jaxb-api/2.3.1</param>
-							<param>scan-bundle:mvn:com.sun.activation/javax.activation/1.2.0</param>
+							<!-- starting from java 11, need to add implementation -->
+							<!--<param>scan-bundle:mvn:com.sun.xml.bind/jaxb-osgi/2.3.3</param>-->
+							<!--<param>scan-bundle:mvn:javax.xml.bind/jaxb-api/2.3.1</param>-->
+							<!--<param>scan-bundle:mvn:com.sun.activation/javax.activation/1.2.0</param>-->
 							<!--<param>scan-bundle:mvn:javax.servlet/javax.servlet-api/3.1.0</param>-->
 							<!--<param>scan-bundle:mvn:javax.annotation/javax.annotation-api/1.3.2</param>-->
 							<param>scan-bundle:mvn:jakarta.annotation/jakarta.annotation-api/1.3.4</param>
@@ -423,26 +458,39 @@
 
 							<param>scan-bundle:mvn:org.ops4j.pax.confman/pax-confman-propsloader/0.2.3</param>
 
-							<param>scan-bundle:mvn:org.ops4j.pax.logging/pax-logging-api/1.4</param>
-							<param>scan-bundle:mvn:org.ops4j.pax.logging/pax-logging-service/1.4</param>
+							<param>scan-bundle:mvn:org.ops4j.pax.logging/pax-logging-api/2.0.3</param>
+							<param>scan-bundle:mvn:org.ops4j.pax.logging/pax-logging-log4j1/2.0.3</param>
+							<!--<param>scan-bundle:mvn:org.ops4j.pax.logging/pax-logging-service/2.0.3</param>-->
 
 
 							<!--
-							<param>scan-bundle:mvn:org.glassfish.jersey.media/jersey-media-json-jackson/2.28</param>
-							<param>scan-bundle:mvn:org.glassfish.jersey.inject/jersey-hk2/2.28</param>
+                            <param>scan-bundle:mvn:org.glassfish.jersey.media/jersey-media-json-jackson/2.28</param>
+                            <param>scan-bundle:mvn:org.glassfish.jersey.inject/jersey-hk2/2.28</param>
+                            -->
 
+							<!-- provides javax.inject -->
 							<param>scan-bundle:mvn:org.glassfish.hk2.external/javax.inject/2.5.0-b62</param>
-							<param>scan-bundle:mvn:org.glassfish.hk2/hk2-api/2.5.0</param>
-							<param>scan-bundle:mvn:org.glassfish.hk2/hk2-locator/2.5.0</param>
-							<param>scan-bundle:mvn:org.glassfish.hk2/hk2-utils/2.5.0</param>
-							<param>scan-bundle:mvn:org.glassfish.hk2/hk2-locator/2.5.0</param>
-							<param>scan-bundle:mvn:org.glassfish.hk2/guice-bridge/2.5.0</param>
-							-->
+							<!-- aop alliance for guice -->
+							<param>
+								scan-bundle:mvn:org.apache.servicemix.bundles/org.apache.servicemix.bundles.aopalliance/1.0_5
+							</param>
+							<!-- version for json patch -->
+							<param>scan-bundle:mvn:com.google.guava/guava/16.0.1</param>>
+
+							<!--
+                            <param>scan-bundle:mvn:org.glassfish.hk2/hk2-api/2.5.0</param>
+                            <param>scan-bundle:mvn:org.glassfish.hk2/hk2-locator/2.5.0</param>
+                            <param>scan-bundle:mvn:org.glassfish.hk2/hk2-utils/2.5.0</param>
+                            <param>scan-bundle:mvn:org.glassfish.hk2/hk2-locator/2.5.0</param>
+                            <param>scan-bundle:mvn:org.glassfish.hk2/guice-bridge/2.5.0</param>
+                            -->
 
 
-							<param>scan-bundle:mvn:com.fasterxml.jackson.core/jackson-core/2.9.8</param>
-							<param>scan-bundle:mvn:com.fasterxml.jackson.core/jackson-databind/2.9.8</param>
-							<param>scan-bundle:mvn:com.fasterxml.jackson.core/jackson-annotations/2.9.8</param>
+							<param>scan-bundle:mvn:com.fasterxml.jackson.core/jackson-core/${jackson.version}</param>
+							<param>scan-bundle:mvn:com.fasterxml.jackson.core/jackson-databind/${jackson.version}
+							</param>
+							<param>scan-bundle:mvn:com.fasterxml.jackson.core/jackson-annotations/${jackson.version}
+							</param>
 
 
 							<param>scan-bundle:mvn:org.apache.felix/org.apache.felix.configadmin/1.8.16</param>
@@ -450,14 +498,17 @@
 							<param>scan-bundle:mvn:org.apache.felix/org.apache.felix.fileinstall/3.6.4</param>
 							<param>scan-bundle:mvn:org.apache.felix/org.apache.felix.metatype/1.1.6</param>
 
+							<param>scan-bundle:mvn:org.osgi/org.osgi.util.pushstream/1.0.0</param>
+							<param>scan-bundle:mvn:org.osgi/org.osgi.util.function/1.1.0</param>
+							<param>scan-bundle:mvn:org.osgi/org.osgi.util.promise/1.1.0</param>
 
 							<!--<param>scan-bundle:mvn:org.apache.felix/org.apache.felix.deploymentadmin/0.9.10</param>-->
 
 							<!--
-							<param>scan-bundle:mvn:org.apache.felix/org.apache.felix.configadmin/1.4.0</param>
-							<param>scan-bundle:mvn:org.apache.felix/org.apache.felix.fileinstall/3.2.8</param>
-							<param>scan-bundle:mvn:org.apache.felix/org.apache.felix.metatype/1.0.4</param>
-							-->
+                            <param>scan-bundle:mvn:org.apache.felix/org.apache.felix.configadmin/1.4.0</param>
+                            <param>scan-bundle:mvn:org.apache.felix/org.apache.felix.fileinstall/3.2.8</param>
+                            <param>scan-bundle:mvn:org.apache.felix/org.apache.felix.metatype/1.0.4</param>
+                            -->
 
 
 							<param>scan-bundle:mvn:org.apache.felix/org.apache.felix.dependencymanager/3.1.0</param>
@@ -469,35 +520,28 @@
 
 
 							<param>scan-bundle:mvn:org.apache.felix/org.apache.felix.webconsole/4.0.0</param>
-							<param>scan-bundle:mvn:org.apache.felix/org.apache.felix.webconsole.plugins.event/1.0.2</param>
-							<param>scan-bundle:mvn:org.apache.felix/org.apache.felix.webconsole.plugins.memoryusage/1.0.0</param>
-							<param>scan-bundle:mvn:org.apache.felix/org.apache.felix.webconsole.plugins.packageadmin/1.0.0</param>
-							<param>scan-bundle:mvn:org.apache.felix/org.apache.felix.webconsole.plugins.obr/1.0.0</param>
-
-							<!--<param>scan-bundle:mvn:org.eclipse.jetty/jetty-client/9.2.6.v20141205</param>-->
-
-
-							<!-- <param>scan-bundle:mvn:org.knopflerfish.bundle/device-IMPL/3.0.2</param> -->
-
-							<!--  <param>scan-bundle:mvn:com.h2database/h2/1.4.190@nostart</param>-->
+							<param>scan-bundle:mvn:org.apache.felix/org.apache.felix.webconsole.plugins.event/1.0.2
+							</param>
+							<param>
+								scan-bundle:mvn:org.apache.felix/org.apache.felix.webconsole.plugins.memoryusage/1.0.0
+							</param>
+							<param>
+								scan-bundle:mvn:org.apache.felix/org.apache.felix.webconsole.plugins.packageadmin/1.0.0
+							</param>
+							<param>scan-bundle:mvn:org.apache.felix/org.apache.felix.webconsole.plugins.obr/1.0.0
+							</param>
 
 							<!--
-							<param>scan-bundle:mvn:com.ptoceti/com.ptoceti.osgi.data/2.0.0-SNAPSHOT@update</param>
-							<param>scan-bundle:mvn:com.ptoceti/com.ptoceti.osgi.control/2.0.0-SNAPSHOT@update</param>
-							<param>scan-bundle:mvn:com.ptoceti/com.ptoceti.osgi.sqlite/2.0.0-SNAPSHOT@update</param>
-							<param>scan-bundle:mvn:com.ptoceti/com.ptoceti.osgi.obix-api/2.0.0-SNAPSHOT@update</param>
-							<param>scan-bundle:mvn:com.ptoceti/com.ptoceti.osgi.obix-lib/2.0.0-SNAPSHOT@update</param>
-							<param>scan-bundle:mvn:com.ptoceti/com.ptoceti.osgi.wireadmin/2.0.0-SNAPSHOT@update</param>
-							<param>scan-bundle:mvn:com.ptoceti/com.ptoceti.osgi.dfrobot.sensornode/2.0.0-SNAPSHOT@nostart</param>
-							<param>scan-bundle:mvn:com.ptoceti/com.ptoceti.osgi.modbus/2.0.0-SNAPSHOT@update</param>
-							<param>scan-bundle:mvn:com.ptoceti/com.ptoceti.osgi.rxtx/2.0.0-SNAPSHOT@update</param>
-							<param>scan-bundle:mvn:com.ptoceti/com.ptoceti.osgi.modbusdevice/2.0.0-SNAPSHOT@update</param>
-							<param>scan-bundle:mvn:com.ptoceti/com.ptoceti.osgi.mqtt/2.0.0-SNAPSHOT@nostart</param>
-							<param>scan-bundle:mvn:com.ptoceti/com.ptoceti.osgi.timeseries/2.0.0-SNAPSHOT@update</param>
-							<param>scan-bundle:mvn:com.ptoceti/com.ptoceti.osgi.obix.angular/2.0.0-SNAPSHOT@update</param>
-                            <param>scan-bundle:mvn:com.ptoceti/com.ptoceti.osgi.ebus/2.0.0-SNAPSHOT@update</param>
+                                                        <param>scan-bundle:mvn:com.ptoceti/com.ptoceti.osgi.control/2.0.0-SNAPSHOT@update</param>
+                                                        <param>scan-bundle:mvn:com.ptoceti/com.ptoceti.osgi.wireadmin/2.0.0-SNAPSHOT@update</param>
+                                                        <param>scan-bundle:mvn:com.ptoceti/com.ptoceti.osgi.modbus/2.0.0-SNAPSHOT@nostart</param>
+                                                        <param>scan-bundle:mvn:com.ptoceti/com.ptoceti.osgi.rxtx/2.0.0-SNAPSHOT@update</param>
+                                                        <param>scan-bundle:mvn:com.ptoceti/com.ptoceti.osgi.modbusdevice/2.0.0-SNAPSHOT@update</param>
+                                                        <param>scan-bundle:mvn:com.ptoceti/com.ptoceti.osgi.mqtt/2.0.0-SNAPSHOT@nostart</param>
+                                                        <param>scan-bundle:mvn:com.ptoceti/com.ptoceti.osgi.timeseries/2.0.0-SNAPSHOT@nostart</param>
+                                                        <param>scan-bundle:mvn:com.ptoceti/com.ptoceti.osgi.ebus/2.0.0-SNAPSHOT@nostart</param>
                             -->
-							
+
 						</provision>
 					</configuration>
 				</plugin>
@@ -521,13 +565,47 @@
 				<version>${osgi.compendium.version}</version>
 			</dependency>
 
-			<!--
 			<dependency>
 				<groupId>org.osgi</groupId>
-				<artifactId>org.osgi.enterprise</artifactId>
-				<version>${osgi.enterprise.version}</version>
+				<artifactId>org.osgi.service.log</artifactId>
+				<version>1.4.0</version>
 			</dependency>
-			-->
+
+			<dependency>
+				<groupId>org.osgi</groupId>
+				<artifactId>org.osgi.service.cm</artifactId>
+				<version>1.5.0</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.osgi</groupId>
+				<artifactId>org.osgi.service.wireadmin</artifactId>
+				<version>1.0.1</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.osgi</groupId>
+				<artifactId>org.osgi.service.cm</artifactId>
+				<version>1.5.0</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.osgi</groupId>
+				<artifactId>org.osgi.util.measurement</artifactId>
+				<version>1.0.1</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.osgi</groupId>
+				<artifactId>org.osgi.util.position</artifactId>
+				<version>1.0.1</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.osgi</groupId>
+				<artifactId>org.osgi.service.http.whiteboard</artifactId>
+				<version>1.0.0</version>
+			</dependency>
 
 			<dependency>
 				<groupId>jakarta.ws.rs</groupId>
@@ -535,30 +613,7 @@
 				<version>${jaxrs-api.version}</version>
 			</dependency>
 
-			<dependency>
-				<groupId>org.glassfish.jersey.containers</groupId>
-				<artifactId>jersey-container-servlet</artifactId>
-				<version>${jersey.version}</version>
-			</dependency>
 
-			<dependency>
-				<groupId>org.glassfish.jersey.containers</groupId>
-				<artifactId>jersey-container-jetty-http</artifactId>
-				<version>${jersey.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.glassfish.jersey.containers</groupId>
-				<artifactId>jersey-container-jetty-servlet</artifactId>
-				<version>${jersey.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.glassfish.jersey.media</groupId>
-				<artifactId>jersey-media-json-jackson</artifactId>
-				<version>${jersey.version}</version>
-			</dependency>
-			
 			<dependency>
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
@@ -575,26 +630,33 @@
 				<groupId>com.google.inject</groupId>
 				<artifactId>guice</artifactId>
 				<version>4.2.2</version>
+				<classifier>no_aop</classifier>
 			</dependency>
 
 			<dependency>
-		        <groupId>org.eclipse.paho</groupId>
-		        <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
-		        <version>1.0.2</version>
-		    </dependency>
-	    
+				<groupId>javax.servlet</groupId>
+				<artifactId>javax.servlet-api</artifactId>
+				<version>${servlet-api.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.eclipse.paho</groupId>
+				<artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+				<version>1.0.2</version>
+			</dependency>
+
 			<dependency>
 				<groupId>org.knopflerfish.bundle</groupId>
 				<artifactId>kxml-LIB</artifactId>
 				<version>2.3.0.kf3</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-core</artifactId>
 				<version>${jackson.version}</version>
 			</dependency>
-	
+
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-databind</artifactId>
@@ -630,7 +692,12 @@
 				<artifactId>jackson-dataformat-yaml</artifactId>
 				<version>${jackson.version}</version>
 			</dependency>
-		
+
+			<dependency>
+				<groupId>com.ptoceti</groupId>
+				<artifactId>influxdb-fluentapi</artifactId>
+				<version>${influxdb-fluentapi.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -646,20 +713,20 @@
 	-->
 
 	<modules>
-		<module>com.ptoceti.osgi.data</module>
 		<module>com.ptoceti.osgi.control</module>
 		<module>com.ptoceti.osgi.modbus</module>
 		<module>com.ptoceti.osgi.modbusdevice</module>
-		<module>com.ptoceti.osgi.obix</module>
 		<module>com.ptoceti.osgi.rxtx</module>
-		<module>com.ptoceti.osgi.sqlite</module>
 		<module>com.ptoceti.osgi.wireadmin</module>
-		<module>com.ptoceti.osgi.dfrobot.sensornode</module>
-	    <module>com.ptoceti.osgi.mqtt</module>
-	    <module>com.ptoceti.osgi.timeseries</module>
-        <module>com.ptoceti.osgi.obix.angular</module>
-        <module>com.ptoceti.osgi.ebus</module>
+		<module>com.ptoceti.osgi.mqtt</module>
+		<module>com.ptoceti.osgi.timeseries</module>
+		<module>com.ptoceti.osgi.ebus</module>
 		<module>com.ptoceti.osgi.assembly</module>
-        <module>com.ptoceti.osgi.ebusdevice</module>
-    </modules>
+		<module>com.ptoceti.osgi.ebusdevice</module>
+		<module>com.ptoceti.osgi.rest</module>
+		<module>com.ptoceti.osgi.resteasy</module>
+		<module>com.ptoceti.osgi.smallrye</module>
+		<module>com.ptoceti.osgi.jaxb-impl</module>
+		<module>com.ptoceti.osgi.ihm</module>
+	</modules>
 </project>
